--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     },
     "platforms": [
       "ios",
-      "android",
-      "browser"
+      "android"
     ]
   },
   "displayName": "Vue3Cordova",
